Details
-
Bug
-
Status: Resolved
-
Major
-
Resolution: Fixed
-
6.0.1
-
pyarrow 6.0.1, macbook pro
Description
Hi !
If you create a StructArray with an ExtensionArray in it, then both to_numpy and to_pandasĀ segfault in python:
import pyarrow as pa class CustomType(pa.PyExtensionType): def __init__(self): pa.PyExtensionType.__init__(self, pa.binary()) def __reduce__(self): return CustomType, () arr = pa.ExtensionArray.from_storage(CustomType(), pa.array([b"foo"])) pa.StructArray.from_arrays([arr], ["name"]).to_numpy(zero_copy_only=False)
Thanks in advance for the help !
Attachments
Issue Links
- links to