ARROW-15291: [C++][Python] Segfault in StructArray.to_numpy and to_pandas if it contains an ExtensionArray

This PR tries to solve [ARROW-15291](https://issues.apache.org/jira/browse/ARROW-15291).

Not sure about `if/else` in the `arrow_to_pandas.cc`. Maybe there is a way to redefine a field `shared_ptr` and optimize a bit? @pitrou what do you think?

cc @jorisvandenbossche

Closes #12505 from AlenkaF/ARROW-15291

Authored-by: Alenka Frim <frim.alenka@gmail.com>
Signed-off-by: Joris Van den Bossche <jorisvandenbossche@gmail.com>