cpp/src/arrow/python/arrow_to_pandas.cc
@@ -655,7 +655,12 @@ Status ConvertStruct(PandasOptions options, const ChunkedArray& data,
     auto arr = checked_cast<const StructArray*>(data.chunk(c).get());
     // Convert the struct arrays first
     for (int32_t i = 0; i < num_fields; i++) {
-      const auto field = arr->field(static_cast<int>(i));
+      auto field = arr->field(static_cast<int>(i));
+      // In case the field is an extension array, use .storage() to convert to Pandas
+      if (field->type()->id() == Type::EXTENSION) {
+        const ExtensionArray& arr_ext = checked_cast<const ExtensionArray&>(*field);
+        field = arr_ext.storage();
+      }
       RETURN_NOT_OK(ConvertArrayToPandas(options, field, nullptr,
                                          fields_data[i + fields_data_offset].ref()));
       DCHECK(PyArray_Check(fields_data[i + fields_data_offset].obj()));
